# XShare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md
.cache/clangd/index/: XShare.c.BCCAD0F5077F833C.idx
src/: GC.c  GC.h  XShare.c  XShare.h  shared_table.c  shared_table.h  stored_object.c  stored_object.h
